--- a/Bootstrap-5/sunzhine/style.css
+++ b/Bootstrap-5/sunzhine/style.css
@@ -1,3 +1,7 @@
+.light{
+    background-color: white;
+    box-shadow:  0 4px 2px -2px rgba(255, 255, 255, 0.486);;
+}
 .nav-link:hover{
     border-bottom: 4px solid green;
     padding: 0;
