--- a/Bootstrap-5/sunzhine/style.css
+++ b/Bootstrap-5/sunzhine/style.css
@@ -25,8 +25,38 @@
     border: none;
     
 }
-
-
+.list-group li:hover{
+    border-bottom: 4px solid green;
+    padding: 0;
+}
+.gallery{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 7px;
+    margin-top: 5%;
+}
+.gallery img:hover{
+    transform: scale(0.8);
+    transition: 0.6s;
+    box-shadow: 2px 2px 4px 4px grey;
+}
+.footer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2%;
+}
+.footer-icons{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 20px;
+}
+.footer-icons:hover{
+    transform: scale(1.3);
+    transition: 2s;
+}
 
 
 
@@ -35,10 +65,20 @@
     .fa-bars{
         display: none;
     }
+    .footer{
+        align-items: center;
+        justify-content: center;
+        padding-bottom: 5%;
+    }
     
 }
 @media screen and (max-width:768px){
     .fa-bars{
         display: none;
+    }
+    .footer{
+        align-items: center;
+        justify-content: center;
+        padding-bottom: 5%;
     }
 }
