--- a/Bootstrap-5/my-portfolio/style.css
+++ b/Bootstrap-5/my-portfolio/style.css
@@ -1,70 +1,20 @@
-/* body{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+.hero-section{
+    overflow: hidden;
 }
-.bg-video{
-    width: 100%;
-    height: 120vh;
-    top: 0;
-    bottom: 0;
-    position: relative;
-}
-.hero-content {
-    background: rgba(255, 230, 0, 0.144);
-    color: #f1f1f1;
-    width: auto;
-    height: 100vh;
-    right: 0;
-    left: 0;
-    top: 1;
-    bottom: 0;
-    position: absolute;
-    margin-top: -70%;   
-    padding: 20px;
-}
-
-
-@media screen and (max-width:425px) {
-    .hero-content{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-} */
-
-/* .hero-section{
-    width: 100%;
-    height: auto;
-    background-color: red;
-}
-.bg-video{
-    min-width: 100%;
-    position: relative;
-    height: 100vh;
-} */
-
-/* .hero-section{
-    background-color: rgba(255, 230, 0, 0.144);
-    position: absolute;
-    z-index: 1;
-    width: 100%;
-    height:auto;
-} */
-.bg-video{
+.bg-video {
     position: relative;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
-.navs{
+.navbar{
     position: absolute;
     top: 0;
     z-index: 2;
     background-color: transparent;
     width: 100%;
 }
-.nav-li:hover{
+.nav-link:hover{
     background-color: #FFC107;
     border-radius: 15px 50px;
     padding: 5px;
@@ -80,11 +30,29 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 .img-border{
     border: 4px solid#FFC107;
     margin-bottom: 2%
 }
+.bg-container{
+    background-image: linear-gradient(#ffc107cb , #ffc107cc);
+    padding: 1%;
+    align-items: center;
+    color: black;
+    margin-top: -1%;
+
+}
+.bg2-container{
+    margin-top: -1%;
+    background-image: linear-gradient(#ffc107cb , #ffc107cc);
+    padding: 1%;
+    align-items: center;
+    color: black;
+
+}
+
 
 @media  screen and (max-width:425px) {
     .bg-color{
@@ -94,11 +62,55 @@
         display: none;
     }
     .nav-li{
-        font-size: 14px;
+        font-size: 15px;
+        text-align: center;
+        color: #FFC107;
     }
+    .hero-details{
+        background-color: rgba(0, 0, 0, 0.932);
+        /* z-index: 1; */
+        padding-top: 5%;
+        height: 400px;
+        width: 100%;
+    }
+    .skills{
+        margin-top: 500px;
+    }
+    .portfolio{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        margin-bottom: 5%;
+    }
+    .card{
+        margin-bottom: 5%;
+    }
+    .social-icons{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+    }
+}
+@media screen and (max-width:640px) {
     .hero-details{
         background-color: rgba(0, 0, 0, 0.932);
         z-index: 1;
         padding-top: 5%;
+        height: 500px;
+        width: 100%;
+    }
+    
+}
+@media screen and (max-width:768px) {
+    .portfolio{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .card{
+        margin-bottom: 5%;
     }
 }
