--- a/Bootstrap-5/sunzhine/style.css
+++ b/Bootstrap-5/sunzhine/style.css
@@ -58,7 +58,17 @@
     transition: 2s;
 }
 
+::-webkit-scrollbar {
+    width: 5px;
+}
 
+::-webkit-scrollbar-track {
+    background: white;
+}
+
+::-webkit-scrollbar-thumb {
+    background: black;
+}
 
 
 @media screen and (max-width:320px){
